# message-ix-buildings

./: .Rhistory  .gitignore  README.md  README.rst  main.R  main_DG_GROW.R  ms_agg.csv  ms_switch_fuel_exo.csv  pyproject.toml  report_calibration.csv  report_calibration_fuel_heat.csv  report_calibration_ren_shell.csv  result.csv  run_STURM_offline.R  run_STURM_offline_SSP_2023.R  run_STURM_offline_SSP_2023_ex.R  run_STURM_offline_TEST.R  test.csv  u.csv
STURM_data/: all_scenarios.csv  constraint_scenario.csv  data_input_SSP2_EFC_LOWDEM_2100_comm.RData  data_input_SSP2_EFC_LOWDEM_2100_resid.RData  data_input_SSP2_NAV_Dem-NPi-act-tec_2100_resid.RData  data_input_SSP2_NAV_Dem-NPi-act_2100_comm.RData  data_input_SSP2_NAV_Dem-NPi-act_2100_resid.RData  data_input_SSP2_NAV_Dem-NPi-all_2100_resid.RData  data_input_SSP2_NAV_Dem-NPi-ele_2100_comm.RData  data_input_SSP2_NAV_Dem-NPi-ref_2100_resid.RData  data_input_SSP2_NAV_Dem-NPi-tec_2100_resid.RData  data_input_SSP2_SSP2_2100_comm.RData  data_input_nsp_SDP_MC-1p5C_2100_comm.RData  data_input_nsp_SDP_MC-1p5C_2100_resid.RData  first_best_scenario.csv  formatting_inputs.rmd  generate_scenarios.rmd  input_U_values.csv  input_list_resid.csv  input_list_resid_DG_GROW_EU.csv  input_list_resid_EU.csv  input_list_resid_EU_no_calibration.csv  input_list_resid_SSP_2023.csv  input_prices_EU.csv  scenarios.csv  scenarios_DG_GROW_EU.csv  scenarios_EU.csv  scenarios_TEST.csv  scenarios_renovation.csv  scenarios_sensitivity.csv  scenarios_test_EU.csv  second_best_scenario.csv
STURM_data/input_RData/: data_input_SSP2_NAV_Dem-NPi-all_2100_comm.RData  (+1 more)
STURM_model/: B00_functions.R  F01_inputs.R  F01_inputs_all.R  F02_init_stock_dyn_fut.R  F03_energy_demand.R  F04_constr_decision.R  F05_endogenous_subsidies.R  F05_renov_switch_decision.R  F05bis_renovation.R  F06_stock_dyn_complete_rev.R  F07_formatting_output.R  F08_calibration.R  F10_scenario_run.R  F10_scenario_runs_MESSAGE_2100.R  R00_report_basic.R  R01_report_MESSAGE.R  R02_report_IRP.R  R05_report_NAVIGATE.R  test.R
STURM_output/: C00_concat_figures.rmd  C00_plot_settings.R  C00_plots.R  C00_plots_settings.R  C01_figures_agg.rmd  C01_figures_det.rmd  C02_figures_scenarios_agg.rmd  C04_description_stock_agg.rmd  C04_description_stock_det.rmd  C04_figures_static.rmd  C05_figures_input.rmd  C06_cost_benefit_analysis.rmd  build_optimal_scenarios.R  figures.rmd  figures_reprex.Rmd  figures_reprex.md  figures_scenarios.rmd  make_figures_scenarios.R  make_figures_standalone.R  make_policy_standalone.R  many_scenarios.R  many_scenarios.rmd  nb_figures_agg.rmd  nb_figures_scenarios_agg.rmd  plot_settings.R  post_traitment.R  report_IRP_EU_implementation_resid_R12.csv  report_IRP_SSP2_2C_comm_R12.csv  report_IRP_SSP2_2C_resid_R12.csv  report_NAVIGATE_EU_implementation_resid_R12.csv  report_NAVIGATE_EU_implementation_resid_region_bld.csv  report_NAVIGATE_IND_SSP2_resid_R12.csv  report_NAVIGATE_SSP1_LED_resid_R12.csv  report_NAVIGATE_SSP3_resid_R12.csv  report_NAVIGATE_SSP4_resid_R12.csv  report_NAVIGATE_SSP5_resid_R12.csv  report_NGFS_SSP2_BL_resid_R12.csv  report_STURM_EU_implementation_resid_R12_energy.csv  report_STURM_IND_SSP2_resid_R12_material.csv  report_STURM_NAV_Dem-NPi-ref_resid_R12_energy.csv  (+13 more)
doc/: chilled.rst  conf.py  dev.rst  index.rst  sturm.rst  testing.rst
(+732 files in other folders)
