[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
name = "message-ix-buildings"
authors = [
  {name = "IIASA ECE Program"}
]
maintainers = [
  {name = "Xiaoyang Zhong", email = "zhongx@iiasa.ac.at"},
  {name = "Alessio Mastrucci", email = "mastrucc@iiasa.ac.at"},
  {name = "Paul Natsuo Kishimoto", email = "kishimot@iiasa.ac.at"},
  {name = "Fridolin Glatter", email = "glatter@iiasa.ac.at"},
]
readme = "README.rst"

[project.urls]
homepage = "https://github.com/iiasa/message-ix-buildings"
repository = "https://github.com/iiasa/message-ix-buildings"
documentation = "https://docs.messageix.org/buildings/"

[project.optional-dependencies]
chilled = [
  "numpy",
  "pandas",
  "xarray",
]
docs = [
  "Sphinx",
  # required for sphinx-rtd-theme 1.2.2, remove support is added
  # see https://github.com/readthedocs/sphinx_rtd_theme/issues/1323
  "docutils < 0.19",
]
tests = [
  "pytest",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".venv",
    "example.py",
    "import.py",
]
line-length = 88

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = ["C9", "E", "F", "I", "W"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports:
"__init__.py" = ["F401"]
"user_settings.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10
